--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,9 +21,9 @@
   align-items: center;
   min-height: 100vh;
   position: relative;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: fixed; */
 }
 
 /* ------------------------------------- */
