--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -92,7 +92,9 @@
   width: 100%;
   height: 100vh;
   z-index: 1;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  bottom: 0;
   -webkit-box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.5);
   opacity: 0;
