--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,16 @@
 * Browsers: last 4 version
 */
 
+.App {
+  overflow-x: hidden;
+}
+
+@media (min-width: 750px) {
+  .App {
+    overflow-x: unset;
+  }
+}
+
 section {
   min-height: 100vh;
   display: -webkit-box;
