--- a/src/pages/home/homeComponents/contact/Contact.css
+++ b/src/pages/home/homeComponents/contact/Contact.css
@@ -21,6 +21,7 @@
   justify-content: center;
   padding: 0 5%;
   height: 100%;
+  min-height: unset;
 }
 
 #contact .container {
@@ -69,5 +70,6 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+    margin: 5rem auto;
   }
 }
